--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,12 @@ android {
 
 dependencies {
 
+        implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.material:material:1.2.2'
+        implementation "androidx.recyclerview:recyclerview:1.2.1"
+        // For control over item selection of both touch and mouse driven selection
+        implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
